fix: footer overflow

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body::before {
     50%, 100% { opacity: 0; }
 }
 
-
 .header h1 {
     text-align: center;
     color: #70F15E;
@@ -112,7 +111,6 @@ footer {
     padding: 0.8rem 0;
     border-top: 2px solid #70F15E;
     font-size: 0.9rem;
-    overflow: auto;
 }
 
 footer a {
@@ -173,7 +171,6 @@ footer a:hover {
         transform: rotate(360deg);
     }
 }
-
 
 @media (max-width: 600px) {
     .search-area {
